deployment/manual/test-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-server
  labels:
    app: test-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: test-server
    spec:
      containers:
        - name: test-server
          image: registry.gitlab.com/gaia-x/data-infrastructure-federation-services/authenticationauthorization/auth-app:1.1.0-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - name: "http"
              containerPort: 8990

      restartPolicy: Always
