deployment/manual/test-app/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: test-server-service
  labels: 
    app: test-server
spec: 
  ports: 
    - name: "8990"
      port: 8990
      targetPort: 8990
  selector: 
    app: test-server
  type: ClusterIP
