deployment/manual/test-app/service2.yaml
apiVersion: v1
kind: Service
metadata: 
  name: test-server-2-service
  labels: 
    app: test-server-2
spec: 
  ports: 
#    - port: 53582
    - name: "8990"
      port: 8990
      targetPort: 8990
  selector: 
    app: test-server-2
  type: LoadBalancer
